--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.24.0",
+    "env-cmd": "^10.1.0",
     "framer-motion": "^4",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
@@ -26,7 +27,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:dev": "env-cmd -f ./env/.env.development npm run start",
     "build": "react-scripts build",
+    "build:production": "env-cmd -f .env.production npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -47,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.0"
   }
 }
