--- a/products-api/package.json
+++ b/products-api/package.json
@@ -20,6 +20,7 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
+        "@google-cloud/datastore": "^6.6.2",
         "@nestjs/common": "^8.1.1",
         "@nestjs/config": "^1.1.5",
         "@nestjs/core": "^8.1.1",
