--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,13 @@
     "@types/react-dom": "^17.0.0",
     "axios": "^0.24.0",
     "env-cmd": "^10.1.0",
+    "firebase": "9.0.0",
     "framer-motion": "^4",
+    "google-map-react": "^2.1.10",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^4.0.1",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
@@ -53,6 +56,8 @@
     ]
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
+    "@types/google-map-react": "^2.1.3",
     "@types/node": "^17.0.0"
   }
 }
