--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "axios": "^0.24.0",
     "env-cmd": "^10.1.0",
     "firebase": "9.0.0",
@@ -58,6 +55,9 @@
   "devDependencies": {
     "@types/firebase": "^3.2.1",
     "@types/google-map-react": "^2.1.3",
-    "@types/node": "^17.0.0"
+    "@types/node": "^17.0.0",
+    "@types/jest": "^26.0.15",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0"
   }
 }
